--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,20 @@
-version: '3'
-
+version: "3.8"
 services:
-  achat-app:
-    image: khalilsr/achat:1.0.0
-    ports:
-      - "8089:8089"
-    depends_on:
-      - mysql-db
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/achatdb
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD:
-    networks:
-      - achat-network
-
-  mysql-db:
+  mysqldb:
     image: mysql:5.7
+    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD:
-      MYSQL_DATABASE: achatdb
-    networks:
-      - achat-network
-
-networks:
-  achat-network:
+      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+    ports:
+      - 3307:3306
+  achat-backend:
+    depends_on:
+      - mysqldb
+    image: saifdoghri7/achat:1.0.0
+    restart: on-failure
+    environment:
+      MYSQL_ROOT PASSWORD: root_password
+    ports:
+      - 6868:8082
+    stdin_open: true
+    tty: true
