--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,35 @@
 version: "3.8"
 
 services:
-  mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
-    ports:
-      - 3307:3306
-    volumes:
-      - db:/var/lib/mysql
-  achat-backend:
-    depends_on:
-      - mysqldb
-    build: ./
-    restart: on-failure
-    ports:
-      - 6868:8082
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
+
+    mysqldb:
+      image: mysql:5.7
+      restart: unless-stopped
+      environment:
+        - MYSQL_ROOT_PASSWORD=
+        - MYSQL_DATABASE=achatdb
+      ports:
+        - 3307:3306
+      volumes:
+        - db:/var/lib/mysql
+
+    achat-backend:
+        depends_on:
+          - mysqldb
+        image: badreddinen/achat:1.0.0
+        restart: on-failure
+        ports:
+          - 6868:8082
+        environment:
+          SPRING_APPLICATION_JSON: '{
+                "spring.datasource.url"  : "jdbc:mysql://mysql:3307/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
+                "spring.datasource.username" : "root",
+                "spring.datasource.password" : "null",
+                "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+                "spring.jpa.hibernate.ddl-auto" : "update"
+        }'
+
+        stdin_open: true
+        tty: true
 volumes:
-  db:
+    db:
