--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 #http://localhost:8089/SpringMVC/...
-#http://192.168.235.2:8089/SpringMVC/facture/retrieve-all-factures
+#http://192.168.4.2:8089/SpringMVC/facture/retrieve-all-factures
 #Server configuration
 server.servlet.context-path=/SpringMVC
 server.port=8089
 
 ### DATABASE ###
 #spring.datasource.url=jdbc:mysql://localhost:3307/achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysql:3307/createDatabaseIfNotExist=true&achatdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3307/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
