--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
           - 6868:8082
         environment:
           SPRING_APPLICATION_JSON: '{
-                "spring.datasource.url"  : "jdbc:mysql://mysql:3307/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
+                "spring.datasource.url"  : "jdbc:mysql://mysqldb:3307/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
                 "spring.datasource.username" : "root",
                 "spring.datasource.password" : "null",
                 "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
