--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
           SPRING_APPLICATION_JSON: '{
                 "spring.datasource.url"  : "jdbc:mysql://mysqldb:3307/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
                 "spring.datasource.username" : "root",
-                "spring.datasource.password" : "null",
+                "spring.datasource.password" : null,
                 "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
                 "spring.jpa.hibernate.ddl-auto" : "update"
         }'
