--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,26 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_DATABASE= achatdb
     ports:
-      - 3307:3306
+      - 3306:3306
   achat-backend:
     depends_on:
       - mysqldb
     image: khalilsr/achat:1.0.0
     restart: on-failure
-    environment:
-      MYSQL_ROOT PASSWORD: root_password
     ports:
       - 8082:8082
+    environment:
+      SPRING_APPLICATION_JSON: '{
+                    "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
+                    "spring.datasource.username" : "root",
+                    "spring.datasource.password" : "",
+                    "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+                    "spring.jpa.hibernate.ddl-auto" : "update"
+            }'
     stdin_open: true
     tty: true
+volumes:
+  db:
