--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,36 @@
 version: "3.8"
+
 services:
-  mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
-    ports:
-    - 3307:3306
-  achat-backend:
-    depends_on:
-    - mysqldb
-    image: saifdoghri7/achat:1.0.0
-    restart: on-failure
-    environment:
-      MYSQL_ROOT PASSWORD: root_password
-    ports:
-    - 6868:8082
-    stdin_open: true
-    tty: true
+
+    mysqldb:
+      image: mysql:5.7
+      restart: unless-stopped
+      environment:
+        #MYSQL_ROOT_PASSWORD=
+        - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+        - MYSQL_DATABASE=achatdb
+      ports:
+        - 3306:3306
+      volumes:
+        - db:/var/lib/mysql
+
+    achat-backend:
+        depends_on:
+          - mysqldb
+        image: badreddinen/achat:1.0.0
+        restart: on-failure
+        ports:
+          - 8082:8082
+        environment:
+          SPRING_APPLICATION_JSON: '{
+                "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC",
+                "spring.datasource.username" : "root",
+                "spring.datasource.password" : "",
+                "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+                "spring.jpa.hibernate.ddl-auto" : "update"
+        }'
+
+        stdin_open: true
+        tty: true
+volumes:
+    db:
