--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     achat-backend:
         depends_on:
           - mysqldb
-        image: badreddinen/achat:1.0.0
+        image: saifdoghri7/achat:1.0.0
         restart: on-failure
         ports:
           - 8082:8082
