--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,19 @@ services:
         - 3306:3306
       volumes:
         - db:/var/lib/mysql
+    prometheus:
+      image: prom/prometheus:v2.35.0
+      container_name: prometheus
+      volumes:
+        - ./prometheus:/etc/prometheus
+        - prometheus_data:/prometheus
+      command:
+        - '--config.file=/etc/prometheus/prometheus.yml'
+        - '--storage.agent.path=/prometheus'
+        - '--web.console.libraries=/etc/prometheus/console_libraries'
+        - '--web.console.templates=/etc/prometheus/consoles'
+        - '--web.enable-lifecycle'
+        - '--enable-feature=agent'
 
     achat-backend:
         depends_on:
@@ -34,3 +47,4 @@ services:
         tty: true
 volumes:
     db:
+    prometheus_data:
