--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
         - db:/var/lib/mysql
     prometheus:
       image: prom/prometheus:v2.35.0
-      container_name: prometheus
+      container_name: prometheus-achat-backend
       volumes:
         - ./prometheus:/etc/prometheus
         - prometheus_data:/prometheus
