--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -4,8 +4,8 @@ global:
 scrape_configs:
   - job_name: 'mysqldb'
     static_configs:
-      - targets: ['mysqldb:3306'] 
+      - targets: ['192.168.1.222:3306'] 
 
   - job_name: 'achat-backend'
     static_configs:
-      - targets: ['achat-backend:3306'] 
+      - targets: ['192.168.1,222:8082'] 
