Prometheus and Grafana

--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -8,9 +8,8 @@ scrape_configs:
 
   - job_name: 'achat-backend'
     static_configs:
-      - targets: ['192.168.1,222:8082'] 
+      - targets: ['192.168.1.222:8082'] 
   
-  - job_name: prometheus
-   static_configs:
-    - targets:
-       - prometheus:9090
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['192.168.1.222:9090'] 
