--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,11 @@ services:
         - 3306:3306
       volumes:
         - db:/var/lib/mysql
+    
     prometheus:
       image: prom/prometheus
       container_name: prometheus-achat-backend
+      restart: unless-stopped
       volumes:
         - ./prometheus:/etc/prometheus
         - prometheus_data:/prometheus
@@ -30,6 +32,20 @@ services:
       
       ports:
         - 9090:9090
+
+    grafana:
+        image: grafana/grafana
+        container_name: grafana-achat-backend
+        restart: unless-stopped
+        ports:
+          - 3000:3000
+        volumes:
+          - ./grafana:/etc/grafana/provisioning
+          - ./grafana/dashboards:/var/lib/grafana/dashboards
+          - ./grafana/datasources:/var/lib/grafana/datasources
+        environment:
+          - GF_SECURITY_ADMIN_PASSWORD=admin
+
 
     achat-backend:
         depends_on:
