--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -4,12 +4,15 @@ global:
 scrape_configs:
   - job_name: 'mysqldb'
     static_configs:
-      - targets: ['192.168.1.222:3306'] 
+      - targets: 
+        - '192.168.1.222:3306'
 
   - job_name: 'achat-backend'
     static_configs:
-      - targets: ['192.168.1.222:8082'] 
+      - targets:
+        - '192.168.1.222:8082'
   
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['192.168.1.222:9090'] 
+      - targets: 
+        - '192.168.1.222:9090'
