--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       image: mysql:5.7
       restart: unless-stopped
       environment:
-        #MYSQL_ROOT_PASSWORD=
+
         - MYSQL_ALLOW_EMPTY_PASSWORD=yes
         - MYSQL_DATABASE=achatdb
       ports:
@@ -32,6 +32,17 @@ services:
 
         stdin_open: true
         tty: true
+    AngularAchat:
+      image: badreddinen/front:1.0.0
+      ports:
+        - 4200:80
+      depends_on:
+        - achat-backend
+      networks:
+        - AngularNetwork
 volumes:
     db:
 
+
+networks:
+  AngularNetwork:
