Prometheus and Grafana

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
 
     prom_mysql_exporter:
       image: prom/mysqld-exporter
+      restart: unless-stopped
       links:
         - mysqldb
       ports:
