--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
 
-    mysqldb:
+    mysql:
       image: mysql:5.7
       restart: unless-stopped
       environment:
@@ -16,7 +16,7 @@ services:
 
     achat-backend:
         depends_on:
-          - mysqldb
+          - mysql
         image: badreddinen/achat:1.0.0
         restart: on-failure
         ports:
@@ -38,7 +38,7 @@ services:
         - 4200:80
       depends_on:
         - achat-backend
-      
+
     # PHPMyAdmin service
     phpmyadmin:
       image: phpmyadmin/phpmyadmin
