--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
 
-    mysql:
+    mysqldb:
       image: mysql:5.7
       restart: unless-stopped
       environment:
@@ -16,7 +16,7 @@ services:
 
     achat-backend:
         depends_on:
-          - mysql
+          - mysqldb
         image: badreddinen/achat:1.0.0
         restart: on-failure
         ports:
@@ -39,17 +39,7 @@ services:
       depends_on:
         - achat-backend
 
-    # PHPMyAdmin service
-    phpmyadmin:
-      image: phpmyadmin/phpmyadmin
-      ports:
-        - "8080:8080"
-      depends_on:
-        - mysql
-      environment:
-        PMA_HOST: mysql
-        PMA_USER: root
-        PMA_PASSWORD: root
+
 volumes:
     db:
 
