--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,6 +8,7 @@ scrape_configs:
         - '192.168.1.222:9104'
 
   - job_name: 'achat-backend'
+    metrics_path: '/actuator/prometheus'
     static_configs:
       - targets:
         - '192.168.1.222:8082'
