--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+   				<groupId>org.springframework.boot</groupId>
+   				<artifactId>spring-boot-starter-actuator</artifactId>
+  		</dependency>
+		<dependency>
     			<groupId>io.micrometer</groupId>
     			<artifactId>micrometer-core</artifactId>
     			<version>1.7.0</version>
