--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,3 +19,9 @@ scrape_configs:
       - targets: 
         - '192.168.1.222:9091'
   
+  -job_name : 'jenkins'
+    metrics_path: '/prometheus'
+    static_configs:
+      - targets:
+        - '192:168.1.222:8080'
+  
