--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,30 +1,13 @@
 pipeline {
     agent any
-
     stages {
         stage('Checkout Codebase') {
             steps {
                 cleanWs()
-                checkout scm: [
-                $class: 'GitSCM',
-                branches: [[name: '*/develop']],
-                    userRemoteConfigs: [
-                          [
-                            url: 'https://github.com/Saif-Doghri/achat.git',
-                            credentialsId: 'my-credential-id',
-                            name: 'origin'
-                          ]
-                    ]
-            }
-                }
-        stage('Build') {
-            steps {
-                 sh 'mkdir lib'
-                 sh 'cd lib/ ; wget https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.7.0/junit-platform-console-standalone-1.7.0-all.jar'
-                 sh 'cd src ; javac -cp "../lib/junit-platform-console-standalone-1.7.0-all.jar" CarTest.java Car.java App.java'
-                            }
+                git branch: 'develop', url: 'https://github.com/Saif-Doghri/achat.git'
             }
         }
+
         stage('Test') {
             steps {
                 echo 'Testing..'
